@@ -6,7 +6,7 @@ registration, activation etc..
 """
 
 def set_user_message(request, message):
-	from contrib.session_messages import create_message
+	from raptiye.session_messages import create_message
 	
 	if request.user.is_authenticated():
 		# leaving message to the user
