@@ -1,6 +1,5 @@
 #-*- encoding: utf-8 -*-
 
-from contrib.session_messages import create_message
 from django.conf import settings
 from django.contrib.auth import authenticate, login, logout
 from django.contrib.auth.models import User
@@ -19,6 +18,7 @@ from raptiye.extra.filters import is_username_unique, is_email_unique
 from raptiye.extra.gravatar import get_gravatar
 from raptiye.extra.mail import *
 from raptiye.extra.messages import *
+from raptiye.session_messages import create_message
 from raptiye.users.forms import *
 
 def gravatar(request, username):
